Se agrega mismo name a los details para al abrir uno se cierre el otro

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <li>Colaboración con equipos de desarrollo para mejorar la calidad del producto.</li>
                         </ul>
                 </details>
-                <details>
+                <details name="sobremi">
                     <summary>Implementación y Capacitación de Sistemas</summary>
                     <span>(enero/2023 - Actualidad)</span><br>
                         <ul class="about">
@@ -83,7 +83,7 @@
                             <li>Capacitación a usuarios finales para garantizar una adopción efectiva del sistema.</li>
                         </ul>
                 </details>
-                <details>
+                <details name="sobremi">
                     <summary>Soporte al Usuario</summary>
                     <span>(enero/2023 - Actualidad)</span><br>
                         <ul class="about">
@@ -95,7 +95,7 @@
                 <li>
                     <h2>Educación y Desarrollo Profesional</h2>
                 </li>
-                <details name="sobremi">
+                <details name="sobremi2">
                     <summary>Actualmente</summary>
                     <ul class="about">
                         <li>Estudiante del segundo año de la carrera de Análisis de Sistemas Informáticos.</li>
@@ -106,7 +106,7 @@
                             realizando el curso de Desarrollador Web del Grupo IDT de manera online.</li>
                     </ul>  
                 </details>
-                <details>
+                <details name="sobremi2">
                     <summary>Objetivos Profesionales</summary>
                     <ul class="about">
                         <li>Mi objetivo es seguir creciendo como profesional en el campo de la tecnología, combinando mis
