Se agrega nueva página para mostrar vista previa del CV

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                     </ul>
                 </details>
             </ul>
+            <p><a class="vermas" href="./curriculum.html">Ver más..</a></p>
         </section>
         <section id="portafolio">
             <div class="cotenedor-portafolio">
