Cambio de archivo html a cv

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </ul>
                 </details>
             </ul>
-            <p><a class="vermas" href="./curriculum.html">Ver más..</a></p>
+            <p><a class="vermas" href="./cv.html">Ver más..</a></p>
         </section>
         <section id="portafolio">
             <div class="cotenedor-portafolio">
