--- a/cv.html
+++ b/cv.html
@@ -57,6 +57,27 @@
             h1{
                 font-size: 1.2em;
             }
+            a{
+                position: fixed;
+                background-color: rgb(6, 6, 192);
+                text-decoration: none;
+                color: white;
+                width: 50px;
+                height: 30px;
+                margin: 5px;
+                border-radius: 10px;
+                cursor: pointer;
+                text-align: center;
+                align-content: center;
+                right: 15px;
+                top: 2px;
+                box-shadow: 2px 2px black;
+
+                &:active {
+                    background-color: rgb(21, 21, 221);
+                    text-decoration: underline;
+                }
+            }
         }
     </style>
 </head>
