--- a/cv.html
+++ b/cv.html
@@ -57,8 +57,8 @@
             h1{
                 font-size: 1.2em;
             }
-            a{
-                position: fixed;
+            a {
+                position: sticky;
                 background-color: rgb(6, 6, 192);
                 text-decoration: none;
                 color: white;
