--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
     <title>Guillermo Barrientos</title>
 </head>
