--- a/cv.html
+++ b/cv.html
@@ -27,9 +27,8 @@
     </header>
     <main>
         <section class="embebido">
-        <!-- <embed src="./docs/GUILLERMO BARRIENTOS CV.pdf#zoom=75&#page=1&navpanes=0" type="application/pdf" width="100%"
-            height="600px"> -->
-        <iframe src="./docs/GUILLERMO BARRIENTOS CV.pdf" frameborder="0" width="910px" height="580px"></iframe>
+        <embed src="./docs/GUILLERMO BARRIENTOS CV.pdf#zoom=75&#page=1&navpanes=0" type="application/pdf" width="100%"
+            height="600px">
         </section>
         <section class="linke">
             <div class="badge-base LI-profile-badge contain" data-locale="es_ES" data-size="large" data-theme="light"
