Se modifica el contenido para dispositivos móviles

--- a/cv.html
+++ b/cv.html
@@ -27,13 +27,13 @@
     </header>
     <main>
         <section class="embebido">
-        <embed src="./docs/GUILLERMO BARRIENTOS CV.pdf#zoom=75&#page=1&navpanes=0" type="application/pdf" width="100%"
+        <embed src="./docs/GUILLERMO BARRIENTOS CV.pdf#zoom=45&#page=1&navpanes=0" type="application/pdf" width="100%"
             height="600px">
         </section>
         <section class="linke">
             <div class="badge-base LI-profile-badge contain" data-locale="es_ES" data-size="large" data-theme="light"
                 data-type="HORIZONTAL" data-vanity="memo94dev" data-version="v1"><a class="badge-base__link LI-simple-link"
-                    href="https://py.linkedin.com/in/memo94dev?trk=profile-badge">Guillermo Barrientos</a></div>
+                    href="https://py.linkedin.com/in/memo94dev?trk=profile-badge">Ver en Linkedin</a></div>
         </section>
     </main>
 </body>
