Se actualiza img de las páginas 1 y 2 Se cambia el ancho del img portafolio para desktop

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         <section id="portafolio">
             <div class="cotenedor-portafolio">
                 <h2>Página 1</h2>
-                <div><a href="https://memo94dev.github.io/socialinks/"><img src="./images/anotador.webp"
+                <div><a href="https://memo94dev.github.io/socialinks/"><img src="./images/social-page.PNG"
                             alt="portada de pagina web"></a></div>
                 <p><a href="https://memo94dev.github.io/socialinks/">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
                 <h2>Página 2</h2>
-                <div><a href="#"><img src="./images/anotador.webp" alt="portada de pagina web"></a></div>
+                <div><a href="https://memo94dev.github.io/todo-list/"><img src="./images/todo-page.PNG" alt="portada de pagina web"></a></div>
                 <p><a href="#">ver más..</a></p>
             </div>
             <div class="cotenedor-portafolio">
